--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "verilog-6502"]
 	path = verilog-6502
 	url = https://github.com/Arlet/verilog-6502.git
+[submodule "tinyfpga_bx_usbserial"]
+	path = tinyfpga_bx_usbserial
+	url = https://github.com/davidthings/tinyfpga_bx_usbserial.git
